# MAC0211-EP2

./: .gitignore  README.md  bugs  list.h  main.c  makefile  statistical.c  statistical.h  strip.h  terrain-internal.h  testestat.c  utils.h
conf/: config.status  configure  configure.ac  libraries.mk  makefile  makefile.in
conf/autom4te.cache/: output.0  traces.0
doc/: Guia_do_Usuario.tex  Manual.tex  makefile
include/: river.h  statistical.h  strip.h  terrain.h  test.h  utils.h
include/list/: list-internal.h  list.h
include/river/: river-internal.h  river.h
include/terrain/: terrain.h
src/: getopt.c  list.c  main.c  river.c  statistical.c  strip.c  terrain.c  test.c
test/: list.c
